--- a/release.gradle
+++ b/release.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'groovy'
+apply plugin: 'maven'
 apply from: 'installation/apply-local.groovy'
 
 configurations {
 	installers {}
 	latestInstallers {}
+	deployerJars {}
 }
 
 repositories {
@@ -12,10 +14,12 @@ repositories {
 }
 
 dependencies {
-	compile gradleApi()
+	compile gradleApi(),
+			'org.ajoberstar:gradle-git:0.4.0'
 	groovy localGroovy()
-	testCompile( 'org.spockframework:spock-core:0.5-groovy-1.8' ) { exclude group: 'org.codehaus.groovy' }
+	testCompile('org.spockframework:spock-core:0.5-groovy-1.8') { exclude group: 'org.codehaus.groovy' }
 	testCompile 'junit:junit:4.10'
+	deployerJars 'org.apache.maven.wagon:wagon-ftp:2.2'
 }
 
 // This updates the apply script with the new version.
@@ -37,10 +41,9 @@ artifacts {
 
 uploadArchives {
 	repositories {
-		add(new org.apache.ivy.plugins.resolver.SFTPResolver()) {
-			host = releaseRepoHost
-			addIvyPattern "${releaseRepoBase}/[module]/[revision]/[artifact]-[revision].[ext]"
-			addArtifactPattern "${releaseRepoBase}/[module]/[revision]/[artifact]-[revision].[ext]"
+		mavenDeployer {
+			configuration = configurations.deployerJars
+			repository(url: releaseRepoUrl) { authentication(userName: releaseRepoUser, password: releaseRepoPass) }
 		}
 	}
 }
